--- a/src/styles/NoteEditor.module.css
+++ b/src/styles/NoteEditor.module.css
@@ -6,7 +6,8 @@
 }
 
 .note-editor-title,
-.note-editor-body {
+.note-editor-body,
+.note-editor-date {
   font-size: 1rem;
   display: block;
   appearance: none;
@@ -16,11 +17,16 @@
 .note-editor-title {
   width: 100%;
   height: 10%;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .note-editor-body {
   width: 100%;
-  height: 90%;
-  appearance: none;
-  display: block;
+  height: 80%;
+}
+
+.note-editor-date {
+  width: 100%;
+  height: 10%;
 }
