--- a/src/styles/NoteEditor.module.css
+++ b/src/styles/NoteEditor.module.css
@@ -1,8 +1,13 @@
 .note-editor-container {
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   overflow: auto;
   font-size: 0;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-rows: 1fr 8fr 1fr;
+  align-items: center;
 }
 
 .note-editor-title,
@@ -12,21 +17,33 @@
   display: block;
   appearance: none;
   border: none;
+  padding: 0 25px;
+  font-family: "Roboto", sans-serif;
+  height: 100%;
 }
 
 .note-editor-title {
   width: 100%;
-  height: 10%;
   font-size: 1.5rem;
   font-weight: bold;
+  font-family: "Raleway", sans-serif;
 }
 
 .note-editor-body {
   width: 100%;
-  height: 80%;
+  padding-top: 25px;
+}
+
+.note-editor-body:focus {
+  background-color: rgba(135, 215, 255, 0.05);
+  outline: none;
+}
+
+.note-editor-title:focus {
+  background-color: rgba(135, 215, 255, 0.05);
+  outline: none;
 }
 
 .note-editor-date {
   width: 100%;
-  height: 10%;
 }
