--- a/src/styles/NoteList.module.css
+++ b/src/styles/NoteList.module.css
@@ -11,6 +11,7 @@
   z-index: 10;
   display: grid;
   grid-template-rows: auto 7fr 1fr;
+  box-shadow: -2px 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .note-list-container.open {
@@ -20,6 +21,7 @@
 .note-list-title {
   margin: 0;
   justify-self: center;
+  font-family: "Raleway", sans-serif;
 }
 
 .note-list-new-note-title {
@@ -27,12 +29,12 @@
 }
 
 .note-list-scroll-container {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   align-items: top;
 }
 
 .note-list-button-container {
-  background-color: tomato;
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
@@ -57,6 +59,12 @@
   border: solid 1px black;
   margin-bottom: 5px;
   min-height: 100px;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+}
+
+.note:hover {
+  background-color: rgba(135, 215, 255, 0.05);
 }
 
 .active-note {
@@ -66,6 +74,10 @@
 .note h3,
 .note div {
   margin: 0 0 10px;
+}
+
+.note h3 {
+  font-family: "Raleway", sans-serif;
 }
 
 .note-list-date {
