--- a/src/styles/NoteList.module.css
+++ b/src/styles/NoteList.module.css
@@ -48,9 +48,57 @@
 
 .note-list-open-button {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: -20px;
   transform: translate3d(-100%, 0, 0);
+  width: 50px;
+  height: 50px;
+  appearance: none;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.note-list-open-button:focus {
+  outline: none;
+}
+
+.note-list-open-button .burger {
+  display: block;
+  width: 50%;
+  height: 5px;
+  border-radius: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #444;
+  transform-origin: center;
+  opacity: 1;
+  transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
+}
+
+.note-list-open-button .burger:first-child {
+  transform: translate(-50%, -200%);
+}
+
+.note-list-open-button .burger:last-child {
+  transform: translate(-50%, 100%);
+}
+
+.note-list-open-button.open .burger {
+  opacity: 0;
+}
+
+.note-list-open-button.open .burger:first-child {
+  transform: translate(-50%, -50%) rotate(-45deg);
+  opacity: 1;
+}
+
+.note-list-open-button.open .burger:last-child {
+  transform: translate(-50%, -50%) rotate(45deg);
+  opacity: 1;
 }
 
 .note {
