--- a/src/styles/NoteList.module.css
+++ b/src/styles/NoteList.module.css
@@ -4,14 +4,32 @@
   right: 0;
   transform: translate3d(100%, 0, 0);
   transition: transform 0.2s ease-in-out;
-  background-color: #fff;
-  width: 25vw;
+  width: 35vw;
   height: 100vh;
-  padding: 0px 10px;
+  max-width: 500px;
+  min-width: 300px;
+  padding: 0;
   z-index: 10;
   display: grid;
   grid-template-rows: auto 7fr 1fr;
   box-shadow: -2px 0 15px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+}
+
+.note-list-container:before {
+  content: "";
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(135, 215, 255, 0.1);
+}
+
+.note-list-container > * {
+  z-index: 1;
+  position: relative;
 }
 
 .note-list-container.open {
@@ -19,7 +37,7 @@
 }
 
 .note-list-title {
-  margin: 0;
+  margin: 10px 0;
   justify-self: center;
   font-family: "Raleway", sans-serif;
 }
@@ -43,7 +61,26 @@
 }
 
 .note-list-button-container button {
-  height: 75%;
+  padding: 10px 0;
+  appearance: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  outline: none;
+  border-radius: 5px;
+}
+
+.note-list-button-container button:focus {
+  outline: none;
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
+}
+
+.note-list-button-container button.note-list-add-button {
+  color: blue;
+}
+
+.note-list-button-container button.note-list-clear-button {
+  color: red;
 }
 
 .note-list-open-button {
@@ -104,7 +141,6 @@
 .note {
   display: block;
   padding: 25px 10px;
-  border: solid 1px black;
   margin-bottom: 5px;
   min-height: 100px;
   font-family: "Roboto", sans-serif;
@@ -112,11 +148,13 @@
 }
 
 .note:hover {
-  background-color: rgba(135, 215, 255, 0.05);
+  background-color: rgba(135, 215, 255, 0.1);
 }
 
-.active-note {
-  border-color: red;
+.active-note,
+.active-note:hover {
+  background-color: rgba(135, 215, 255, 0.3);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .note h3,
